--- a/web-frontend/package.json
+++ b/web-frontend/package.json
@@ -5,10 +5,12 @@
     "test": "echo \"This template does not include a test runner by default.\" && exit 1"
   },
   "devDependencies": {
-    "snowpack": "^3.0.1"
+    "prettier": "^2.2.1",
+    "snowpack": "^3.0.13"
   },
   "dependencies": {
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0"
   }
 }
