--- a/web-frontend/package.json
+++ b/web-frontend/package.json
@@ -9,6 +9,7 @@
     "snowpack": "^3.0.13"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0"
