--- a/web-frontend/package.json
+++ b/web-frontend/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
+    "react-wordcloud": "^1.2.7",
     "rumble-charts": "^3.1.2"
   }
 }
