--- a/web-frontend/package.json
+++ b/web-frontend/package.json
@@ -9,21 +9,10 @@
     "snowpack": "^3.0.13"
   },
   "dependencies": {
-    "@nhuson/react-d3-cloud": "^1.0.19",
-    "@sgratzl/chartjs-esm-facade": "^3.0.0-alpha.21",
     "axios": "^0.21.1",
-    "chart.js": "^3.0.0-beta.13",
-    "chartjs-chart-wordcloud": "^3.0.0-beta.11",
-    "d3": "^6.6.0",
-    "d3-tagcloud-for-react": "^1.0.2",
-    "lifeweb-wordcloud-v3": "^1.0.7",
-    "randomcolor": "^0.6.2",
     "react": "^17.0.1",
-    "react-d3-cloud": "^0.7.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-tag-cloud": "^1.3.2",
-    "react-wordcloud": "^1.2.7",
-    "rumble-charts": "^3.1.2"
+    "react-wordcloud": "^1.2.7"
   }
 }
