--- a/web-frontend/package.json
+++ b/web-frontend/package.json
@@ -10,10 +10,8 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "chart.js": "^2.9.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "rumble-charts": "^3.1.2"
+    "react-router-dom": "^5.2.0"
   }
 }
