--- a/web-frontend/package.json
+++ b/web-frontend/package.json
@@ -12,7 +12,6 @@
     "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "react-wordcloud": "^1.2.7"
+    "react-router-dom": "^5.2.0"
   }
 }
