codedeploy bug fix

--- a/backend/appspec.yml
+++ b/backend/appspec.yml
@@ -14,3 +14,21 @@ permissions:
     type:
       - file
       - directory
+       -hooks:
+# ApplicationStop:
+  # - location: deploy/scripts/stop.sh
+    # timeout: 300
+    # runas: ubuntu
+# BeforeInstall:
+    # timeout: 300
+    # runas: root
+AfterInstall:
+  - location: deploy/scripts/install_dep.sh
+  - location: deploy/scripts/init.sh
+    timeout: 800
+    runas: ubuntu
+ApplicationStart:
+  - location: deploy/scripts/start.sh
+    timeout: 300
+    runas: ubuntu
+
