--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,31 +1,55 @@
+argcomplete==1.12.2
+bcrypt==3.2.0
 blis==0.7.4
 boto3==1.17.27
 botocore==1.20.27
 catalogue==2.0.1
 certifi==2020.12.5
+cffi==1.14.5
+cfn-flip==1.2.3
 chardet==4.0.0
 click==7.1.2
 cymem==2.0.5
+dnspython==2.1.0
+durationpy==0.5
+email-validator==1.1.2
 Flask==1.1.2
+Flask-Bcrypt==0.7.1
 Flask-Cors==3.0.10
+Flask-JWT-Extended==4.1.0
+flask-mongoengine==1.0.0
+Flask-WTF==0.14.3
+future==0.18.2
+hjson==3.0.2
 idna==2.10
 importlib-metadata==3.7.3
 itsdangerous==1.1.0
 Jinja2==2.11.3
 jmespath==0.10.0
 joblib==1.0.1
+kappa==0.6.0
 MarkupSafe==1.1.1
+mongoengine==0.23.0
 murmurhash==1.0.5
 nltk==3.5
 numpy==1.20.1
 packaging==20.9
 pandas==1.2.3
 pathy==0.4.0
+pep517==0.10.0
+pip-tools==6.0.1
+placebo==0.9.0
 preshed==3.0.5
+pycparser==2.20
 pydantic==1.7.3
+PyJWT==2.0.1
+pymongo==3.11.3
 pyparsing==2.4.7
 python-dateutil==2.8.1
+python-dotenv==0.15.0
+python-slugify==4.0.1
 pytz==2021.1
+PyYAML==5.4.1
 regex==2020.11.13
 requests==2.25.1
 s3transfer==0.3.4
@@ -36,12 +60,17 @@ smart-open==3.0.0
 spacy==3.0.5
 spacy-legacy==3.0.1
 srsly==2.4.0
+text-unidecode==1.3
 thinc==8.0.2
 threadpoolctl==2.1.0
+toml==0.10.2
 tqdm==4.59.0
+troposphere==2.6.4
 typer==0.3.2
 typing-extensions==3.7.4.3
 urllib3==1.26.3
 wasabi==0.8.2
-Werkzeug==1.0.1
+Werkzeug==0.16.1
+wsgi-request-logger==0.4.6
+WTForms==2.3.3
 zipp==3.4.1
