appspec cd pipeline application stop hook added

--- a/backend/appspec.yml
+++ b/backend/appspec.yml
@@ -14,10 +14,10 @@ permissions:
     type:
       - directory
 hooks:
-  # ApplicationStop:
-    # - location: deploy/scripts/stop.sh
-      # timeout: 300
-      # runas: ubuntu
+  ApplicationStop:
+    - location: deploy/scripts/stop.sh
+      timeout: 300
+      runas: ubuntu
   # BeforeInstall:
       # timeout: 400
       # runas: root
