ci/cd improvements

--- a/backend/appspec.yml
+++ b/backend/appspec.yml
@@ -18,13 +18,14 @@ hooks:
     - location: deploy/scripts/stop.sh
       timeout: 300
       runas: ubuntu
-  # BeforeInstall:
-      # timeout: 400
-      # runas: root
+  BeforeInstall:
+    - location: deploy/scripts/install_os_dep.sh
+      timeout: 800
+      runas: ubuntu
   AfterInstall:
     - location: deploy/scripts/install_dep.sh
     - location: deploy/scripts/init.sh
-      timeout: 800
+      timeout: 300
       runas: ubuntu
   ApplicationStart:
     - location: deploy/scripts/start.sh
