--- a/web-frontend/package.json
+++ b/web-frontend/package.json
@@ -9,8 +9,15 @@
     "snowpack": "^3.0.13"
   },
   "dependencies": {
+    "@nhuson/react-d3-cloud": "^1.0.19",
+    "@sgratzl/chartjs-esm-facade": "^3.0.0-alpha.21",
+    "apexcharts": "^3.26.0",
     "axios": "^0.21.1",
+    "chart.js": "^3.0.0-rc.2",
+    "chartjs-chart-wordcloud": "^3.0.0-beta.11",
+    "echarts": "^5.0.2",
     "react": "^17.0.1",
+    "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0"
   }
