--- a/web-frontend/package.json
+++ b/web-frontend/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "react-toast-notification": "^1.1.4"
   }
 }
