--- a/web-frontend/package.json
+++ b/web-frontend/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-toast-notification": "^1.1.4",
-    "react-toast-notifications": "^2.4.3"
+    "react-toast-notifications": "^2.4.3",
+    "react-toastify": "^7.0.3"
   }
 }
