--- a/web-frontend/package.json
+++ b/web-frontend/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^3.0.0-rc.2",
     "chartjs-chart-wordcloud": "^3.0.0-beta.11",
     "echarts": "^5.0.2",
+    "jsonwebtoken": "^8.5.1",
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.1",
