--- a/web-frontend/package.json
+++ b/web-frontend/package.json
@@ -20,9 +20,11 @@
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-toast-notification": "^1.1.4",
     "react-toast-notifications": "^2.4.3",
-    "react-toastify": "^7.0.3"
+    "react-toastify": "^7.0.3",
+    "styled-components": "^5.2.3"
   }
 }
