app config improvements to include seperate env for test and dev

--- a/backend/api/.env
+++ b/backend/api/.env
@@ -1,2 +1,2 @@
 JWT_SECRET_KEY='t1NP63m4wnBg6nyHYKfmc2TpCOGI4nss'
-MONGO_URI='mongodb+srv://bmora:AlDcw%24dfg698@sdgp-cluster.uhoqi.mongodb.net/test?retryWrites=true&w=majority'
+MONGO_URI='mongodb+srv://bmora:AlDcw%24dfg698@sdgp-cluster.uhoqi.mongodb.net/genimen?retryWrites=true&w=majority'
