--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,5 @@
 argcomplete==1.12.2
+attrs==20.3.0
 bcrypt==3.2.0
 blis==0.7.4
 catalogue==2.0.1
@@ -21,6 +22,7 @@ future==0.18.2
 hjson==3.0.2
 idna==2.10
 importlib-metadata==3.7.3
+iniconfig==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.3
 jmespath==0.10.0
@@ -28,6 +30,7 @@ joblib==1.0.1
 kappa==0.6.0
 MarkupSafe==1.1.1
 mongoengine==0.23.0
+mongomock==3.22.1
 murmurhash==1.0.5
 nltk==3.5
 numpy==1.20.1
@@ -37,12 +40,16 @@ pathy==0.4.0
 pep517==0.10.0
 pip-tools==6.0.1
 placebo==0.9.0
+pluggy==0.13.1
 preshed==3.0.5
+py==1.10.0
 pycparser==2.20
 pydantic==1.7.3
 PyJWT==2.0.1
 pymongo==3.11.3
 pyparsing==2.4.7
+pytest==6.2.3
+pytest-mock==3.5.1
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 python-slugify==4.0.1
@@ -53,6 +60,7 @@ requests==2.25.1
 s3transfer==0.3.4
 scikit-learn==0.24.1
 scipy==1.6.1
+sentinels==1.0.0
 six==1.15.0
 smart-open==3.0.0
 spacy==3.0.5
