--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Run Tests
         run: |
           cd backend
-          pytest -s -k-db test/test_api.py
+          pytest test/test_api.py
   deploy:
     needs: test
     name: CD Pipeline
