--- a/backend/api/.test.env
+++ b/backend/api/.test.env
@@ -1,2 +1,3 @@
 JWT_SECRET_KEY='t1NP63m4wnBg6nyHYKfmc2TpCOGI4nss'
-MONGO_URI='mongodb://127.0.0.1:27017/test'
+# MONGO_URI='mongodb://127.0.0.1:27017/test'
+MONGO_URI='mongomock://localhost/mongoenginetest'
