--- a/.github/workflows/frontend_deploy.yml
+++ b/.github/workflows/frontend_deploy.yml
@@ -14,19 +14,19 @@ on:
       - 'web-frontend/**'
 
 jobs:
- deploy:
+  deploy:
     name: CD Pipeline
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        - name: serverless deploy
-      uses: suprgames/serverless-github-action@v1.77
-      with:
-        command: deploy
+      - name: serverless deploy
+        uses: suprgames/serverless-github-action@v1.77
+        with:
+          command: deploy
         args: -v
-      env:
-        # To link with your Serverless Framework account, equivalent to login
-        SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
-        # The AWS Credentials
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        env:
+          # To link with your Serverless Framework account, equivalent to login
+          # SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
+          # The AWS Credentials
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
