--- a/.github/workflows/frontend_deploy.yml
+++ b/.github/workflows/frontend_deploy.yml
@@ -24,8 +24,8 @@ jobs:
           cd web-frontend
       - name: serverless deploy
         uses: suprgames/serverless-github-action@v1.77
-        with:
-          command: deploy
+        # with:
+          # command: deploy
           # args: -d web-frontend/
         env:
           # To link with your Serverless Framework account, equivalent to login
@@ -33,3 +33,9 @@ jobs:
           # The AWS Credentials
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        - name: deploy serverless
+          run: |
+            cd web-frontend/
+            serverless deploy
+
+
