--- a/.github/workflows/frontend_deploy.yml
+++ b/.github/workflows/frontend_deploy.yml
@@ -19,23 +19,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: CD into frontend
-        run: |
-          cd web-frontend
-      - name: serverless deploy
+      - name: serverless actions
         uses: suprgames/serverless-github-action@v1.77
-      - name: deploy serverless
-        run: |
-          cd web-frontend/
-          serverless deploy
-        # with:
-          # command: deploy
-          # args: -d web-frontend/
+        with:
+          command: deploy
+          args: -v
         env:
           # To link with your Serverless Framework account, equivalent to login
           # SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
           # The AWS Credentials
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
+      - name: serverless deploy
+        run: |
+          serverless deploy -d web-frontend
 
