--- a/.github/workflows/frontend_deploy.yml
+++ b/.github/workflows/frontend_deploy.yml
@@ -14,22 +14,25 @@ on:
       - 'web-frontend/**'
 
 jobs:
-  deploy-dev:
+  deploy:
+    name: deploy
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [14.x]
     steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-node@v1
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
       with:
-        node-version: '12.x'
-    - name: Install Serverless Framework
-      run: npm install -g serverless
-    - name: Serverless AWS authentication
-      run: sls config credentials --provider aws --key ${{  secrets.AWS_ACCESS_KEY_ID }} --secret ${{ secrets.AWS_SECRET_ACCESS_KEY}}
-    # Optional
-    #- name: Build assets
-    #  run: npm run assets-dev
-    - name: Deploy
-      run: sls deploy
-    # Optional (to use with serverless-finch serverless plugin)
-    #- name: Deploy assets to S3
-    #  run: sls client deploy --no-delete-contents --no-confirm -s dev
+        node-version: ${{ matrix.node-version }}
+    # - run: npm ci
+    - name: serverless deploy
+      uses: serverless/github-action@master
+      with:
+        args: deploy
+      env:
+        SERVERLESS_ACCESS_KEY: AKX6EjKTU9BYbaUe9zgDk5ov13aNHNKPoNjSaNQNUVN3Q
+        # or if using AWS credentials directly
+        # AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        # AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
