--- a/.github/workflows/frontend_deploy.yml
+++ b/.github/workflows/frontend_deploy.yml
@@ -26,11 +26,13 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    # - run: npm ci
+    - run: |
+        cd ./web-frontend
+        npm ci
     - name: serverless deploy
       uses: serverless/github-action@master
       with:
-        args: deploy
+        args: deploy -d web-frontend/
       env:
         SERVERLESS_ACCESS_KEY: AKX6EjKTU9BYbaUe9zgDk5ov13aNHNKPoNjSaNQNUVN3Q
         # or if using AWS credentials directly
