--- a/.github/workflows/frontend_deploy.yml
+++ b/.github/workflows/frontend_deploy.yml
@@ -3,13 +3,13 @@ name: Deploy Frontend
 on:
   push:
     branches:
-      - Dev
+      - none
     paths:
       - 'web-frontend/**'
 
   pull_request:
     branches:
-      - Dev
+      - none
     paths:
       - 'web-frontend/**'
 
