--- a/.github/workflows/frontend_deploy.yml
+++ b/.github/workflows/frontend_deploy.yml
@@ -15,6 +15,9 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: web-fronted
     strategy:
       matrix:
         node-version: [14.x]
@@ -26,7 +29,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: |
-        cd ./web-frontend
+        # cd ./web-frontend
         npm ci
         npm run build
 
