--- a/.github/workflows/frontend_deploy.yml
+++ b/.github/workflows/frontend_deploy.yml
@@ -34,7 +34,5 @@ jobs:
         npm run build
         netlify deploy --prod
       env:
-        # NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-        # NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-        NETLIFY_SITE_ID: 1c8836df-d191-49e9-9032-c978384eeffc
-        NETLIFY_AUTH_TOKEN: FWPzvVSBc-T1UNV0P7QN-Y1FWnJgMEnMld__FZOasKg
+        NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+        NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
