--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -53,6 +53,7 @@ pytest==6.2.3
 pytest-mock==3.5.1
 python-dateutil==2.8.1
 python-dotenv==0.15.0
+python-Levenshtein==0.12.2
 python-slugify==4.0.1
 pytz==2021.1
 PyYAML==5.4.1
